monticore-generator/src/test/resources/cocos/invalid/A4063/A4063.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4063;

grammar A4063 {

  A = key("--") ;

}
